src/main/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sv-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sv-producer
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 50  
  template:
    metadata:
      labels:
        app: sv-producer
    spec:
      containers:
      - name: sv-producer
        image: humourmind/producer:1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "768Mi"
            cpu: "300m"
          limits:
            memory: "768Mi"
            cpu: "750m"
        ports:
        - name: web
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: web
          initialDelaySeconds: 40
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: web
          initialDelaySeconds: 60
          periodSeconds: 1 
          failureThreshold: 1
